@@ -95,6 +95,7 @@ wcrtomb
 wctob
 wctype-h
 xalloc
+xfreopen
 xstrtoimax
 '
 gnulib_name=libgreputils
